voice2text-service/k8s/service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: voice2text-service-svc
  namespace: my-app
spec:
  selector:
    app: voice2text-service
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 6000
